--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 /* use css variables*/
+*{
+    box-sizing: border-box; /* it helps modernize box size calcuation */
 
+
+}
 body{
 
     background-image: url("/assets/images/bgportrait.png");
@@ -67,14 +71,18 @@ nav{
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: auto;
     background-color: black;
-    padding: 10px;
-
-
+    padding: 4px;
+    align-items: center;
+    
 }
 
 .nav-links{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
 
     gap: 40px;
 }
@@ -91,34 +99,33 @@ nav{
     flex-direction: column;
     flex-wrap: wrap;
     max-height: 40px;
-    padding-top: 10px;
+    padding-left: 4px;
+    
 }
 
-.github-icon {
+.github-icon{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 10px;
 }
-  
-.stacked-overflow-icon {
+
+
+.mail-icon{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 40px;
 }
 
-.mail-icon {
+.nav-right{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-    padding-top: 10px;
-}
-
-.bi{
+    text-align: right;
     color: white;
+    font-size: small;
+    align-items: center;
+    padding: 0%;
 }
-
 
 .header-image{
     width: 100%;
@@ -172,16 +179,16 @@ nav{
 }
 
 .car1 {
-    background-image: url('https://th.bing.com/th/id/R.4215c5fc6abbfe6231141eb6a66952f7?rik=JB1IKr2l9IL8Sg&riu=http%3a%2f%2fwallpapercave.com%2fwp%2fKBk1YBX.jpg&ehk=ugeBF2VGQJDZ%2f5S6vxl0iMWMSgOLVzyX8cX6Ayl1gO8%3d&risl=&pid=ImgRaw&r=0');
+    background-image: url('/assets/images/dream3.png');
     
 }
 .car2 {
-    background-image: url('/practice/assets/images/finedining_v2.jpg');
+    background-image: url('https://th.bing.com/th/id/R.4215c5fc6abbfe6231141eb6a66952f7?rik=JB1IKr2l9IL8Sg&riu=http%3a%2f%2fwallpapercave.com%2fwp%2fKBk1YBX.jpg&ehk=ugeBF2VGQJDZ%2f5S6vxl0iMWMSgOLVzyX8cX6Ayl1gO8%3d&risl=&pid=ImgRaw&r=0');
     
 }
 
 .car3 {
-    background-image: url('/practice/assets/images/dream3.png');
+    background-image: url('/assets/images/finedining_v2.jpg');
     
 }
 
@@ -199,7 +206,7 @@ nav{
     padding: 10px;
     flex-direction: row;
     flex-wrap: wrap;
-    box-sizing: border-box;
+
     text-align: left;
     border-style: solid;
     border-width: 2px;
@@ -304,8 +311,12 @@ nav{
     align-items: center;
 }
 .box-a{
-    background-color: rgb(54, 131, 155);
+    /* background-color: rgb(54, 131, 155); */
     
+    background-image: url('/assets/images/portfolio-desktop-view.png');
+    max-height: 100%;
+    max-width: auto;
+              
 }
 
 .box-b{
@@ -320,53 +331,45 @@ nav{
     background-color: rgb(210, 66, 66);
 }
 
-.footer, footer{
+footer{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    text-align: center;
     
     justify-content: space-between;
-    /* flex: 1 1 100%; */
+    flex: 1 1 100%;
     width: 100%;
     background-color: white;
-    padding: 10px;
+    padding-left: 8px;
     
 }
 
-.left{
+.left-footer{
     font-weight: 300;
-    justify-content: left;
+    text-align: center;
+
+    
 }
 
-.right{
+.center-footer{
     font-weight: 500;
     color: green;
-    justify-content: right;
+    text-align: center;
 }
 
-/* .profile {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    box-sizing: border-box;
-    border: solid;
-    border-width: 2px;
-    border-color: var(--color1);
-    border-radius: 12px;
-    box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
-    width: 100%;
-    height: 30%;
-    background-color: white;
-    padding: 10px;
-  } */
+.right-footer{
+    font-weight: 500;
+    text-align: center;
+    padding-right: 8px;
+}
 
 .profile-pic {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 30%;
+    max-width: 100%;
     max-height: 100%;
     /* padding-top: 10px; */
     /* padding-right: 20px; */
@@ -374,10 +377,6 @@ nav{
   }
   
   .profile-img {
-    /* border: solid;
-    border-color: var(--color2); */
-    border-width: 3px;
-    border-radius: 190px;
     width: 80px;
     height: 70px;
   }
