--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ nav{
     width: 100%;
     height: auto;
     background-color: black;
-    padding: 4px;
+    padding: 10px;
     align-items: center;
     
 }
@@ -116,6 +116,16 @@ nav{
     flex-wrap: wrap;
 }
 
+.developer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-items: center;
+    color: white;
+    font-size: x-large;
+}
+
 .nav-right{
     display: flex;
     flex-direction: row;
@@ -127,8 +137,26 @@ nav{
     padding: 0%;
 }
 
+.profile-pic {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+    /* padding-top: 10px; */
+    /* padding-right: 20px; */
+    
+  }
+  
+  .profile-img {
+    width: 80px;
+    height: 70px;
+  }
+
 .header-image{
     width: 100%;
+    
 }
 
 .row{
@@ -137,7 +165,7 @@ nav{
 
 
 .carousel-item {
-    height: 400px;
+    height: 600px;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -221,7 +249,12 @@ nav{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 12px;
+    box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
+    
     width: 100%;
     overflow: hidden;
     
@@ -236,6 +269,7 @@ nav{
     max-width: 66%;
     background-color: white;
     padding: 20px;
+    
 }
 
 .box-33{
@@ -243,6 +277,7 @@ nav{
     max-width: 34%;
     padding: 20px;
     background-color: white;
+    
    }
 
 
@@ -273,6 +308,7 @@ nav{
     text-align: center;
     /* flex: 1 1 100%; */
     width: 100%;
+    
    
     
     
@@ -309,6 +345,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .box-a{
     /* background-color: rgb(54, 131, 155); */
@@ -341,13 +378,21 @@ footer{
     flex: 1 1 100%;
     width: 100%;
     background-color: white;
-    padding-left: 8px;
+    padding: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 12px;
+    box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
+    
     
 }
 
 .left-footer{
     font-weight: 300;
     text-align: center;
+    justify-content: center;
+    
 
     
 }
@@ -359,24 +404,8 @@ footer{
 }
 
 .right-footer{
-    font-weight: 500;
+    font-weight: 300;
     text-align: center;
-    padding-right: 8px;
+    padding-right: 10px;
 }
 
-.profile-pic {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 100%;
-    max-height: 100%;
-    /* padding-top: 10px; */
-    /* padding-right: 20px; */
-    
-  }
-  
-  .profile-img {
-    width: 80px;
-    height: 70px;
-  }
