--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,27 +351,37 @@ nav{
     /* background-color: rgb(54, 131, 155); */
     
     background-image: url('/assets/images/portfolio-desktop-view.png');
-    max-height: 100%;
-    max-width: auto;
+    max-height: 400px;
+    max-width: 100;
+    width: 100%;
+    height: 200px;
+    background-size: cover; /* or 'contain' */
+    background-position: center;
               
 }
 
 .box-b{
     background-image: url('/assets/images/dream-desktop.png');
-    max-height: 100%;
-    max-width: auto;
+    width: 100%;
+    height: 200px;
+    background-size: cover; /* or 'contain' */
+    background-position: center;
     
 }
 .box-c{
-    background-image: url('/assets/images/dreamMobile.png');
-    max-height: 100%;
-    max-width: auto;
+    background-image: url('/assets/images/restaurant.png');
+    width: 100%;
+    height: 200px;
+    background-size: cover; /* or 'contain' */
+    background-position: center;
 }
 
 .box-d{
-    background-image: url('/assets/images/eventsdesktop.png');
-    max-height: 100%;
-    max-width: auto;
+    background-image: url('/assets/images/events.png');
+    width: 100%;
+    height: 200px;
+    background-size: cover; /* or 'contain' */
+    background-position: center;
 }
 
 footer{
