--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,12 @@ nav{
     background-color: black;
     padding: 10px;
     align-items: center;
+    padding: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 12px;
+    box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
     
 }
 
@@ -150,8 +156,8 @@ nav{
   }
   
   .profile-img {
-    width: 80px;
-    height: 70px;
+    width: 70px;
+    height: 60px;
   }
 
 .header-image{
@@ -245,20 +251,19 @@ nav{
 
 
 
-.second-row {
+.about {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    border-style: solid;
+    border-style: none;
     border-width: 2px;
-    border-color: black;
     border-radius: 12px;
     box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
-    
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    background-color: rgb(89, 86, 101);
     width: 100%;
     overflow: hidden;
-    
-    
 }
 
 .box-66 {
@@ -267,7 +272,7 @@ nav{
     flex-direction: column;
     flex: 1 1 66%;
     max-width: 66%;
-    background-color: white;
+    
     padding: 20px;
     
 }
@@ -276,9 +281,9 @@ nav{
     flex: 1 1 34%;
     max-width: 34%;
     padding: 20px;
-    background-color: white;
     
-   }
+    
+}
 
 
 .links{
@@ -388,12 +393,22 @@ footer{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    text-align: center;
     
+    
+    
+        text-align: center;
+        padding: 5px;
+        background-color: black;
+        color: white;
+      
+      
+
+
+
     justify-content: space-between;
     flex: 1 1 100%;
     width: 100%;
-    background-color: white;
+    
     padding: 10px;
     border-style: solid;
     border-width: 2px;
@@ -422,6 +437,6 @@ footer{
 .right-footer{
     font-weight: 300;
     text-align: center;
-    padding-right: 10px;
+    
 }
 
