--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ nav{
 }
 
 .box-b{
-    background-image: url('assets/images/dream-desktop.png');
+    background-image: url('https://josiesavill.github.io//portfolio-2.0/assets/images/dream-desktop.png');
     width: 100%;
     height: 200px;
     background-size: cover; /* or 'contain' */
@@ -374,7 +374,7 @@ nav{
     
 }
 .box-c{
-    background-image: url('assets/images/restaurant.png');
+    background-image: url('https://josiesavill.github.io//portfolio-2.0/assets/images/restaurant.png');
     width: 100%;
     height: 200px;
     background-size: cover; /* or 'contain' */
@@ -382,7 +382,7 @@ nav{
 }
 
 .box-d{
-    background-image: url('assets/images/events.png');
+    background-image: url('https://josiesavill.github.io//portfolio-2.0/assets/images/events.png');
     width: 100%;
     height: 200px;
     background-size: cover; /* or 'contain' */
