--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ main {
 header{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
     
@@ -41,6 +42,8 @@ header{
     display: flex;
     flex-direction: row;
     align-items: left;
+    flex-wrap: wrap;
+    
 }
 
 .first{
@@ -59,6 +62,7 @@ header{
     display: flex;
     flex-direction: row;
     align-items: right;
+    flex-wrap: wrap;
 }
 
 .city{
@@ -301,6 +305,7 @@ nav{
     flex: 1 1 34%;
     max-width: 34%;
     padding: 20px;
+    flex-wrap: wrap;
     
     
 }
