--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,12 @@ header{
     h2{
         margin-bottom: 0px;
     }
+
+    @media only screen and (max-width: 600px){
+        flex-direction: column;
+        justify-content: center;
+        
+    }
     
 }
 
