--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,20 +53,20 @@ header{
 }
 
 .first{
-    font-weight: 350;
+    font-weight: 450;
     display: flex;
     align-items: center;
     @media only screen and (max-width: 600px){
-        font-weight: 450;
+        font-weight: 550;
     }
 }
 
 .last{
-    font-weight: 80;
+    font-weight: 180;
     display: flex;
     align-items: center;
     @media only screen and (max-width: 600px){
-        font-weight: 180;
+        font-weight: 280;
     }
 }
 
@@ -78,35 +78,24 @@ header{
 }
 
 .city{
-    font-weight: 80;
+    font-weight: 180;
     display: flex;
     align-items: center;
     @media only screen and (max-width: 600px){
-        font-weight: 180;
+        font-weight: 280;
     }
 }
 
 .state{
-    font-weight: 350;
+    font-weight: 450;
     display: flex;
     align-items: center;
     @media only screen and (max-width: 600px){
-        font-weight: 450;
+        font-weight: 550;
     }
 }
 
-.bird {
-    max-width: 60px;
-    max-height: 60px;
-    mix-blend-mode: multiply;
-    opacity: 0.5;
-    /* position: fixed; */
-    /* top: 80px;
-    left: 340px; */
-    z-index: 5;
-    display: flex;
-    align-items: center;
-}
+
 
 nav{
     display: flex;
@@ -306,24 +295,33 @@ nav{
     background-color: rgb(89, 86, 101);
     width: 100%;
     overflow: hidden;
+
+    @media only screen and (max-width: 600px){
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 .box-66 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    flex: 1 1 66%;
-    max-width: 66%;
+    flex: 1 1 60%;
+    max-width: 60%;
     
     padding: 20px;
     
 }
 
 .box-33{
-    flex: 1 1 34%;
-    max-width: 34%;
+    flex: 1 1 40%;
+    max-width: 40%;
     padding: 20px;
     flex-wrap: wrap;
+    @media only screen and (max-width: 600px){
+        flex-direction: column;
+        justify-content: center;
+    }
     
     
 }
@@ -436,22 +434,13 @@ footer{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    
-    
-    
-        text-align: center;
-        padding: 5px;
-        background-color: black;
-        color: white;
-      
-      
-
-
-
+    text-align: center;
+    padding: 5px;
+    background-color: black;
+    color: white;
     justify-content: space-between;
     flex: 1 1 100%;
     width: 100%;
-    
     padding: 10px;
     border-style: solid;
     border-width: 2px;
@@ -459,6 +448,10 @@ footer{
     border-radius: 12px;
     box-shadow: 4px 4px 8px rgba(61, 24, 24, 0.5);
     
+    @media only screen and (max-width: 600px){
+        flex-direction: column;
+        justify-content: center;
+    }
     
 }
 
@@ -469,6 +462,20 @@ footer{
     
 
     
+}
+
+.bird{
+    max-width: 40px;
+    max-height: 40px;
+    mix-blend-mode: multiply;
+    /* opacity: 0.5; */
+    /* position: fixed; */
+    /* top: 80px;
+    left: 340px; */
+    z-index: 5;
+    display: flex;
+    align-items: center;
+
 }
 
 .center-footer{
